-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.5.0
-
None
-
-
2c9b7a986 (dev), 2b4ce4bc5 (6.5)
After https://codereview.qt-project.org/c/qt/qtbase/+/437950 all background is grey, which was before white, radio and checkboxes are all black and impossible to see. If the window is not active, or you drag the window, the radio / check and checkboxes are normal.
This is on on XFCE. See attached screenshot.
| For Gerrit Dashboard: QTBUG-109454 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 449252,2 | Fix checkbox and radiobutton background in QGtk3Theme | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 449376,2 | Fix checkbox and radiobutton background in QGtk3Theme | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |